# Reminder-App

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
UI/: __init__.py  form_view.py  icons_scroll_frame.py  main_view.py  notifications_list_view.py  search_icon_frame.py  second_view.py
jobs/: job_error.py  job_notification.py
models/: notification.py
utils/: globals_var.py
